--- a/DotsAndBoxes/Properties/launchSettings.json
+++ b/DotsAndBoxes/Properties/launchSettings.json
@@ -1,10 +1,14 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/DotsAndBoxes",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:51925",
-      "sslPort": 44346
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -18,10 +22,10 @@
     "DotsAndBoxes": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
